# AsyncRattus

./: .gitignore  AsyncRattus.cabal  CHANGELOG.md  LICENSE  README.md  Rattus.cabal  WidgetRattus.cabal
.github/workflows/: ci.yml
examples/async-simplestuff/: async-simplestuff.cabal
examples/async-simplestuff/src/: Main.hs  Simple.hs  StandardLibrary.hs
examples/cmdline/: cmdline.cabal
examples/cmdline/src/: Cmd.hs  Main.hs
examples/console/: console.cabal
examples/console/src/: Future.hs  GUI.hs  Hangman.hs  Signal.hs
examples/gui/: gui.cabal
examples/gui/src/: Calculator.hs  Counter.hs  FlightBooker.hs  GUI.hs  Stopwatch.hs  TemperatureConverter.hs  Timer.hs
examples/gui/src/AsyncRattus/: Widgets.hs
examples/gui/src/AsyncRattus/Widgets/: Types.hs
examples/gui/src/WidgetRattus/: Widgets.hs
examples/gui/src/WidgetRattus/Widgets/: Types.hs
examples/simple-sheet/: simple-sheet.cabal  spreadsheet.cabal
examples/simple-sheet/src/: Expr.hs  Main.hs  Sheet.hs
examples/spreadsheet/: spreadsheet.cabal
examples/spreadsheet/src/: Expr.hs  Main.hs  MegaParser.hs  Sheet.hs
examples/textwriter/: textwriter.cabal
examples/textwriter/src/: Main.hs
src/: AsyncRattus.hs  Rattus.hs  WidgetRattus.hs
src/AsyncRattus/: Channels.hs  Derive.hs  Future.hs  InternalPrimitives.hs  Later.hs  Plugin.hs  Primitives.hs  Signal.hs  Stream.hs  Strict.hs
src/AsyncRattus/Plugin/: Annotation.hs  CheckClockCompatibility.hs  CheckSingleTick.hs  Dependency.hs  PrimExpr.hs  ScopeCheck.hs  SingleTick.hs  StableSolver.hs  Strictify.hs  Transform.hs  Utils.hs
src/Rattus/: Channels.hs  Event.hs  Future.hs  InternalPrimitives.hs  Later.hs  Plugin.hs  Primitives.hs  Stream.hs  Strict.hs  ToHaskell.hs  Yampa.hs
src/Rattus/Plugin/: Annotation.hs  CheckSingleTick.hs  PrimExpr.hs  ScopeCheck.hs  SingleTick.hs  Transform.hs  Utils.hs
src/WidgetRattus/: Channels.hs  Derive.hs  Future.hs  InternalPrimitives.hs  Plugin.hs  Primitives.hs  Signal.hs  Strict.hs  Time.hs  Widgets.hs
src/WidgetRattus/Plugin/: Annotation.hs  CheckClockCompatibility.hs  Dependency.hs  PrimExpr.hs  ScopeCheck.hs  SingleTick.hs  StableSolver.hs  Strictify.hs  Transform.hs  Utils.hs
src/WidgetRattus/Widgets/: InternalTypes.hs  Types.hs
test/: Channels.hs  Future.hs  IllTyped.hs  MemoryLeak.hs  NewlyTyped.hs  Primitives.hs  Rewrite.hs  Signal.hs  StandardLibrary.hs  TimeLeak.hs  WellTyped.hs
