cabal-version:       >=1.10

name:                async-simplestuff
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:              Emil and Gregers
maintainer:          ehou@itu.dk | grtr@itu.dk
-- copyright:
-- category:
build-type:          Simple

                    

executable testprog
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       StandardLibrary, Simple
  default-language:    Haskell2010
  build-depends:       Rattus, base, containers, gloss
  ghc-options:         -fplugin=Rattus.Plugin -dverbose-core2core -O0