cabal-version:       >=1.10

name:                cmdline
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:              Emil Houlborg & Gregers Rørdam
maintainer:          ehou@itu.dk | grtr@itu.dk
-- copyright:
-- category:
build-type:          Simple

                    

executable testprog
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Cmd
  default-language:    Haskell2010
  build-depends:       AsyncRattus, base, containers, gloss
  ghc-options:         -fplugin=AsyncRattus.Plugin