cabal-version:       >=1.10

name:                console
version:             0.1.0.0

author:              Patrick Bahr
maintainer:          paba@itu.dk
build-type:          Simple

executable signal
  hs-source-dirs:      src
  main-is:             Signal.hs
  default-language:    Haskell2010
  build-depends:       AsyncRattus, base, text

executable future
  main-is:             Future.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       AsyncRattus, base, text
