cabal-version:       >=1.10

name:                gui
version:             0.1.0.0

author:              Patrick Bahr
maintainer:          paba@itu.dk
build-type:          Simple

                    

executable gui
  hs-source-dirs:      src
  main-is:             GUI.hs
  other-modules:       AsyncRattus.Widgets
  default-language:    Haskell2010
  build-depends:       WidgetRattus, base, text, monomer, containers
