cabal-version:       >=1.10

name:                gui
version:             0.1.0.0

author:              Patrick Bahr, Jean-Claude Sebastian Disch, Asger Lademark Heegaard
maintainer:          paba@itu.dk
build-type:          Simple

executable gui
  hs-source-dirs:      src
  main-is:             GUI.hs
  other-modules:       AsyncRattus.Widgets, AsyncRattus.Widgets.Types, Counter, TemperatureConverter, FlightBooker, Timer, Calculator
  default-language:    Haskell2010
  build-depends:       WidgetRattus>=0.2, base, text, monomer, containers, deepseq