cabal-version:       >=1.10

name:                gui
version:             0.1.0.0

author:              Patrick Bahr, Jean-Claude Sebastian Disch, Asger Lademark Heegaard
maintainer:          paba@itu.dk
build-type:          Simple

executable calculator
  hs-source-dirs:      src
  main-is:             Calculator.hs
  default-language:    Haskell2010
  build-depends:       WidgetRattus>=0.2, base, text, containers
  ghc-options:         -W

executable counter
  hs-source-dirs:      src
  main-is:             Counter.hs
  default-language:    Haskell2010
  build-depends:       WidgetRattus>=0.2, base, text, containers
  ghc-options:         -W

executable flight
  hs-source-dirs:      src
  main-is:             FlightBooker.hs
  default-language:    Haskell2010
  build-depends:       WidgetRattus>=0.2, base, text, containers
  ghc-options:         -W

executable converter
  hs-source-dirs:      src
  main-is:             TemperatureConverter.hs
  default-language:    Haskell2010
  build-depends:       WidgetRattus>=0.2, base, text, containers
  ghc-options:         -W

executable timer
  hs-source-dirs:      src
  main-is:             Timer.hs
  default-language:    Haskell2010
  build-depends:       WidgetRattus>=0.2, base, text, containers
  ghc-options:         -W

executable stopwatch
  hs-source-dirs:      src
  main-is:             Stopwatch.hs
  default-language:    Haskell2010
  build-depends:       WidgetRattus>=0.2, base, text, containers, time
  ghc-options:         -W